  3. Improved compatbility with game updates: One feature breaking wouldn't break the whole mod
  4. Controller compatibility: previously few specific features would break with controllers. Since they no longer automatically apply their patches, ToyBox should work with controllers as long as those features aren't enabled.
  5. Less stuff that can cause different behaviour even though no relevant feature is activated (Did you know: ToyBox added an extra renderer/highlighter for every object by default. Why it did that, none of the remaining devs know (or even knew about that at all))

Reworked Browsers. Again:
- Improved search performance by performing consecutive searches on the already found subset; also removed some synchronization
- Abstracted things in such a way that it would be possible to support an alternate fuzzy search mode

Rewrote some features:
- They might work better now. Or worse (hopefully not).
- Fixed Preview Dialog Results predicting the wrong dialog paths in rare situations
- PreventPsychicPhenomena now prevents all (including Unsanctioned Psyker)
- CustomizePsychicPhenomena now also accounts for phenomena triggered in a non-standard way (e.g. Unsanctioned Psyker)
- Add proper names/descriptions to each phenomena in CustomizePsychicPhenomena
- Ignore Equipment Restrictions adjusted for armour?
- Fig Ignore Ability Requirement XYZ not working if Ignore All Requirements is disabled (making those other oness useless)
- Fix some level up ui issues that could happen if people changed the RespecFromX settings after doing respecs on a different setting.
- Allow custom levels in RespecFromX

Removed useless/unimplemented features:
- Lots of things were leftover from the initial Wrath => RogueTrader port and/or became useless over time; the toggles/buttons basically did nothing but were still in the UI and sometimes still applied their patches.

Rewrote Inspector:
- More options
- Less crashes