@@ -25,7 +25,20 @@ public partial class EnemyStatMultiplierFeature : FeatureWithPatch {
             return "ToyBox.Features.BagOfTricks.EnemyStatModifier.EnemyStatMultiplierFeature";
         }
     }
-
+    private readonly TimedCache<int> m_ValueWidth = new(() => {
+        var list = Settings.MultiplierEnemyMods.Values.Select(val => $"{val:F}    ").ToList() ?? [];
+        if (list.Count == 0) {
+            list.Add("1.00    ");
+        }
+        return (int)CalculateLargestLabelSize(list);
+    });
+    private readonly TimedCache<int> m_FieldWith = new(() => {
+        var list = Settings.MultiplierEnemyMods.Values.Select(val => $"{val:F}    ").ToList() ?? [];
+        if (list.Count == 0) {
+            list.Add("1.00    ");
+        }
+        return (int)CalculateLargestLabelSize(list, GUI.skin.textField);
+    });
     private readonly TimedCache<float> m_LabelWidth = new(() => {
         List<string> names = [];
         foreach (StatType stat in Enum.GetValues(typeof(StatType))) {
@@ -51,14 +64,24 @@ public partial class EnemyStatMultiplierFeature : FeatureWithPatch {
                         if (Constants.NonHumanStats.Contains(stat) || Constants.LegacyStats.Contains(stat)) {
                             continue;
                         }
-                        _ = Settings.MultiplierEnemyMods.TryGetValue(stat, out var mod);
+                        if (!Settings.MultiplierEnemyMods.TryGetValue(stat, out var mod)) {
+                            mod = 1;
+                        }
                         using (HorizontalScope()) {
                             var name = LocalizedTexts.Instance.Stats.GetText(stat);
                             if (string.IsNullOrWhiteSpace(name)) {
                                 name = stat.ToString();
                             }
                             UI.Label(name, Width(m_LabelWidth + 50 * Main.UIScale));
-                            if (UI.Slider(ref mod, -100, 100, 1, 2)) {
+                            if (UI.Slider(ref mod, -10, 10, 1, 2, valueLabelWidth: m_ValueWidth)) {
+                                if (mod == 1) {
+                                    Settings.MultiplierEnemyMods.Remove(stat);
+                                } else {
+                                    Settings.MultiplierEnemyMods[stat] = mod;
+                                }
+                            }
+                            Space(5 * Main.UIScale);
+                            if (UI.TextField(ref mod, null, Width(m_FieldWith))) {
                                 if (mod == 1) {
                                     Settings.MultiplierEnemyMods.Remove(stat);
                                 } else {
@@ -73,6 +96,15 @@ public partial class EnemyStatMultiplierFeature : FeatureWithPatch {
     }
     [HarmonyPatch(typeof(ModifiableValue), nameof(ModifiableValue.ModifiedValue), MethodType.Getter), HarmonyPostfix]
     private static void ModifiableValue_getModifiedValue_Patch(ModifiableValue __instance, ref int __result) {
+        if (Constants.NonHumanStats.Contains(__instance.OriginalType) || Constants.LegacyStats.Contains(__instance.OriginalType)) {
+            return;
+        }
+        if (__instance.Owner is BaseUnitEntity entity && !entity.IsStarship() && entity.IsPlayerEnemy && Settings.MultiplierEnemyMods.TryGetValue(__instance.OriginalType, out var mod)) {
+            __result = (int)(mod * __result);
+        }
+    }
+    [HarmonyPatch(typeof(ModifiableValue), nameof(ModifiableValue.PermanentValue), MethodType.Getter), HarmonyPostfix]
+    private static void ModifiableValue_getPermanentValue_Patch(ModifiableValue __instance, ref int __result) {
         if (Constants.NonHumanStats.Contains(__instance.OriginalType) || Constants.LegacyStats.Contains(__instance.OriginalType)) {
             return;
         }
