@@ -43,7 +43,7 @@ public partial class MaxWalkDistanceFeature : FeatureWithPatch {
         }
         var tmp = Settings.MaxWalkDistanceSetting ?? m_OriginalMaxWalkDistance.Value;
         using (HorizontalScope()) {
-            if (UI.LogSlider(ref tmp, 0, 1000, m_OriginalMaxWalkDistance.Value, null, AutoWidth(), GUILayout.MinWidth(50), GUILayout.MaxWidth(150))) {
+            if (UI.LogSlider(ref tmp, 0, 1000, m_OriginalMaxWalkDistance.Value, null, null, AutoWidth(), GUILayout.MinWidth(50), GUILayout.MaxWidth(150))) {
                 if (tmp == m_OriginalMaxWalkDistance.Value) {
                     Settings.MaxWalkDistanceSetting = null;
                     Destroy();
