@@ -2,7 +2,7 @@
   "Id": "0ToyBox0",
   "DisplayName": "ToyBox",
   "Author": "Narria, ADDB",
-  "Version": "1.8.9",
+  "Version": "1.8.10",
   "ManagerVersion": "0.25.0",
   "Requirements": [],
   "AssemblyName": "ToyBox.dll",
