@@ -24,6 +24,8 @@ Rewrote some features:
 - Fig Ignore Ability Requirement XYZ not working if Ignore All Requirements is disabled (making those other oness useless)
 - Fix some level up ui issues that could happen if people changed the RespecFromX settings after doing respecs on a different setting.
 - Allow custom levels in RespecFromX
+- Fix Enemy Stat Multiplier not working for some stuff (e.g. Wounds)
+- Make Drag to Aim Camera persist in the session
 
 Removed useless/unimplemented features:
 - Lots of things were leftover from the initial Wrath => RogueTrader port and/or became useless over time; the toggles/buttons basically did nothing but were still in the UI and sometimes still applied their patches.
